--- a/index.html
+++ b/index.html
@@ -13,44 +13,44 @@
 <body>
 
   <header class="grid grid-middle masthead">
-    <div class="unit gutter [ xs-1 s-1 m-1-3 l-1-3 ] pad-t-1-2 pad-b-1-2">
+    <div class="unit gutter [ xs-1 s-1 m-1 l-1-4 ] pad-t-1-2 pad-b-1-2">
       <h1 class="logo peta push">Potion Express</h1>
     </div>
-    <nav class="unit gutter-1-2 [ xs-1 s-1 m-2-3 l-2-3 ] pad-t-1-2 pad-b-1-2">
+    <nav class="unit gutter-1-2 [ xs-1 s-1 m-1 l-3-4 ] pad-t-1-2 pad-b-1-2">
       <ul class="nav giga push-0 list-group">
         <li>
-          <a  class="island" href="#">
+          <a  class="btn island" href="#">
             <i class="icon i-32">
               <img src="images/placeholder-triangle.svg" alt="">
             </i>
-            <span class="icon-label">Unicorn Tears</span>
+            <span class="block">Unicorn Tears</span>
           </a>
         </li>
 
         <li>
-          <a  class="island" href="#">
+          <a  class="btn island" href="#">
             <i class="icon i-32">
               <img src="images/placeholder-triangle.svg" alt="">
             </i>
-            <span class="icon-label">Unicorn Tears</span>
+            <span class="block">Unicorn Tears</span>
           </a>
         </li>
 
         <li>
-          <a  class="island" href="#">
+          <a  class="btn island" href="#">
             <i class="icon i-32">
               <img src="images/placeholder-triangle.svg" alt="">
             </i>
-            <span class="icon-label">Unicorn Tears</span>
+            <span class="block">Unicorn Tears</span>
           </a>
         </li>
 
         <li>
-          <a  class="island" href="#">
+          <a  class="btn island" href="#">
             <i class="icon i-32">
               <img src="images/placeholder-triangle.svg" alt="">
             </i>
-            <span class="icon-label">Unicorn Tears</span>
+            <span class="block">Unicorn Tears</span>
           </a>
         </li>
       </ul>
