--- a/index.html
+++ b/index.html
@@ -8,49 +8,51 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre:400,700" rel="stylesheet">
 </head>
 <body>
 
   <header class="grid grid-middle masthead">
-    <div class="unit gutter [ xs-1 s-1 m-1 l-1-4 ] pad-t-1-2 pad-b-1-2">
-      <h1 class="logo peta push">Potion Express</h1>
+
+    <div class="unit [ xs-1 s-1 m-1 l-1-4 ] gutter pad-t pad-b">
+      <h1 class="logo zeta push-0">Potion&nbsp;Express</h1>
     </div>
-    <nav class="unit gutter-1-2 [ xs-1 s-1 m-1 l-3-4 ] pad-t-1-2 pad-b-1-2">
+
+    <nav class="unit [ xs-1 s-1 m-1 l-3-4 ] gutter-1-2 pad-t-1-2 pad-b-1-2">
       <ul class="nav giga push-0 list-group">
-        <li>
-          <a  class="btn island" href="#">
-            <i class="icon i-32">
+        <li class="island-1-8">
+          <a class="btn" href="#">
+            <i class="icon i-32 push-1-4">
               <img src="images/placeholder-triangle.svg" alt="">
             </i>
-            <span class="block">Unicorn Tears</span>
+            <span class="block kilo">Unicorn Tears</span>
           </a>
         </li>
 
-        <li>
-          <a  class="btn island" href="#">
-            <i class="icon i-32">
+        <li class="island-1-8">
+          <a class="btn" href="#">
+            <i class="icon i-32 push-1-4">
               <img src="images/placeholder-triangle.svg" alt="">
             </i>
-            <span class="block">Unicorn Tears</span>
+            <span class="block kilo">Dragon Scales</span>
           </a>
         </li>
 
-        <li>
-          <a  class="btn island" href="#">
-            <i class="icon i-32">
+        <li class="island-1-8">
+          <a class="btn" href="#">
+            <i class="icon i-32 push-1-4">
               <img src="images/placeholder-triangle.svg" alt="">
             </i>
-            <span class="block">Unicorn Tears</span>
+            <span class="block kilo">Yeti Dandruff</span>
           </a>
         </li>
 
-        <li>
-          <a  class="btn island" href="#">
-            <i class="icon i-32">
+        <li class="island-1-8">
+          <a class="btn" href="#">
+            <i class="icon i-32 push-1-4">
               <img src="images/placeholder-triangle.svg" alt="">
             </i>
-            <span class="block">Unicorn Tears</span>
+            <span class="block kilo">Pixie Dust</span>
           </a>
         </li>
       </ul>
