--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
 
-  <header class="grid grid-middle masthead">
+  <header class="grid grid-middle gutter-1-2 pad-t-1-2 pad-b-1-2 masthead">
 
-    <div class="unit [ xs-1 s-1 m-1 l-1-4 ] gutter pad-t pad-b">
+    <div class="unit [ xs-1 s-1 m-1 l-1-4 ] pad-t pad-b">
       <h1 class="logo zeta push-0">Potion&nbsp;Express</h1>
     </div>
 
-    <nav class="unit [ xs-1 s-1 m-1 l-3-4 ] gutter-1-2 pad-t-1-2 pad-b-1-2">
+    <nav class="unit [ xs-1 s-1 m-1 l-3-4 ]">
       <ul class="nav giga push-0 list-group">
         <li class="island-1-8">
           <a class="btn" href="#">
